0026249: Visualization, TKV3d - fix possible division by zero in SelectMgr_RectangularFrustum

Added zero-length check for triangle normal in SelectMgr_RectangularFrustum::Overlaps